@@ -62,6 +62,7 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 	public PathGraph(WeightedDirectedGraph<T> graph, PathNodeFactory<T, PN> factory, SubgraphAssemblyAlgorithmTracker<T, PN> tracker) {
 		this(graph, graph.allNodes(), factory, tracker);
 	}
+	public int getMaxNodeId() { return pathList.size() - 1; } 
 	public boolean sanityCheck() {
 		assert(pathNext.size() == pathList.size());
 		assert(pathPrev.size() == pathList.size());
@@ -115,7 +116,7 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 		while (!frontier.isEmpty()) {
 			T node = frontier.poll();
 			if (visited.contains(node)) continue;
-			PN path = factory.createPathNode(traverseBranchless(node), getGraph());
+			PN path = factory.createPathNode(traverseBranchless(node));
 			kmersTraversed += path.length();
 			pathStart.put(path.first(), path);
 			visited.addAll(path.getPath());
@@ -326,7 +327,7 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 		if (prev(nextNode).get(0) != node) throw new IllegalStateException("Sanity check failure: missing matching prev entry for next node");
 		
 		// create new node
-		PN newNode = factory.concatPathNodes(ImmutableList.of(node, nextNode), getGraph());
+		PN newNode = factory.concatPathNodes(ImmutableList.of(node, nextNode));
 		addNode(newNode);
 		// hook up incoming and output
 		replaceIncomingEdges(node, newNode);
@@ -560,7 +561,7 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 		List<PN> result = Lists.newArrayList();
 		int offset = 0;
 		for (int i = 0; i < lengths.size(); i++) {
-			result.add(factory.splitPathNode(node, offset, lengths.get(i), getGraph()));
+			result.add(factory.splitPathNode(node, offset, lengths.get(i)));
 			offset += lengths.get(i);
 		}
 		assert(offset == node.length());
@@ -616,7 +617,7 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 				return prev(node).size() == 1 && next(node).size() == 1;
 			}
 		});
-	}
+	} 
 	/**
 	 * Traverses source graph until a branch is found
 	 * @param seed starting node
@@ -624,24 +625,29 @@ public class PathGraph<T, PN extends PathNode<T>> implements WeightedDirectedGra
 	 */
 	private LinkedList<T> traverseBranchless(T seed) {
 		LinkedList<T> path = new LinkedList<T>();
-		Set<T> visited = Sets.newHashSet();
 		path.add(seed);
-		visited.add(seed);
-		for(List<T> adj = graph.next(path.getLast()); adj.size() == 1 && graph.prev(adj.get(0)).size() <= 1; adj = graph.next(path.getLast())) {
-			if (visited.contains(adj.get(0))) {
-				// circular contig
+		List<T> adj = graph.next(path.getLast());
+		while (adj.size() == 1) {
+			T adjNode = adj.get(0);
+			if (adjNode.equals(seed)) {
+				// cycle detected
+				return path;
+			}
+			if (graph.prev(adjNode).size() != 1) {
 				break;
 			}
-			path.addLast(adj.get(0));
-			visited.add(adj.get(0));
+			path.addLast(adjNode);
+			adj = graph.next(path.getLast());
 		}
-		for(List<T> adj = graph.prev(path.getFirst()); adj.size() == 1 && graph.next(adj.get(0)).size() <= 1; adj = graph.prev(path.getFirst())) {
-			if (visited.contains(adj.get(0))) {
-				// circular contig
+		adj = graph.prev(path.getFirst());
+		while (adj.size() == 1) {
+			T adjNode = adj.get(0);
+			// (no need to check for cycle since if we were a cycle, we would have reached our starting position on the forward traverse)
+			if (graph.next(adjNode).size() != 1) {
 				break;
 			}
-			path.addFirst(adj.get(0));
-			visited.add(adj.get(0));
+			path.addFirst(adjNode);
+			adj = graph.prev(path.getFirst());
 		}
 		return path;
 	}
